Added new files and updated code

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -25,7 +25,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1400px;
+  /* max-width: 1400px; */
   margin: 0 auto;
   padding: 0 24px;
   height: 100%;
@@ -42,7 +42,7 @@
 }
 
 .futuristic-logo {
-  font-size: 28px;
+  font-size: 32px;
   font-weight: 800;
   letter-spacing: 1px;
   background: linear-gradient(135deg, #54bdff 0%, #8c19f0 50%, #00f7ff 25%, #0f46fa 75%, #af88ff 100%);
@@ -77,6 +77,7 @@
   gap: 8px;
   cursor: pointer;
   flex-direction: row;
+  padding: 0px 18px 0px 18px;
 }
 
 .delivery-info {
@@ -86,14 +87,14 @@
 }
 
 .delivery-tag {
-  font-size: 13px;
+  font-size: 18px;
   font-weight: 600;
   color: #111827;
   white-space: nowrap;
 }
 
 .address-text {
-  font-size: 12px;
+  font-size: 15px;
   font-weight: 400;
   color: #6b7280;
   white-space: nowrap;
@@ -103,7 +104,7 @@
 .search-container {
   display: flex;
   align-items: center;
-  width: 450px;
+  width: 100%;
   background-color: #f9fafb;
   border-radius: 8px;
   padding: 8px 16px;
@@ -146,6 +147,7 @@
   align-items: center;
   gap: 12px;
   flex-shrink: 0;
+  padding-left: 20px;
 }
 
 .action-button {
@@ -271,6 +273,10 @@
   /* Further increased sizes for very small devices */
   .futuristic-logo {
     font-size: 25px; /* Increased from 20px */
+  }
+
+  .location-selector {
+    padding: 0px;
   }
 
   .search-container {
